# ChineseCheckers

./: .gitignore  CMakeLists.txt  ChineseCheckers  ChineseCheckers.sln  ChineseCheckers.vcproj  ChineseCheckers.vcxproj  ChineseCheckers.vcxproj.filters  LICENSE  README.md  SConstruct  Tasks.txt  index.html  snapcraft.yaml
Code/: ChiChe.h  ChiCheApp.cpp  ChiCheApp.h  ChiCheBoard.cpp  ChiCheBoard.h  ChiCheBrain.cpp  ChiCheBrain.h  ChiCheCanvas.cpp  ChiCheCanvas.h  ChiCheCanvasPanel.cpp  ChiCheCanvasPanel.h  ChiCheChatPanel.cpp  ChiCheChatPanel.h  ChiCheClient.cpp  ChiCheClient.h  ChiCheFrame.cpp  ChiCheFrame.h  ChiCheMongo.cpp  ChiCheMongo.h  ChiChePanel.cpp  ChiChePanel.h  ChiCheScorePanel.cpp  ChiCheScorePanel.h  ChiCheServer.cpp  ChiCheServer.h  ChiCheSocket.cpp  ChiCheSocket.h  ChiCheSound.cpp  ChiCheSound.h  ChiCheSphere.cpp  ChiCheSphere.h  ChiCheWinnerPanel.cpp  ChiCheWinnerPanel.h
Code/c3ga/: c3ga.cpp  c3ga.h  c3ga_cpp.xml  c3ga_gen.bat  c3ga_parse_mv.cpp
Package/: MakePackage.bat  MapFile.txt  Package.xml
Snap/: snapcraft.yaml
Snap/setup/gui/: chiche.desktop
